--- a/templates/galleriya.html
+++ b/templates/galleriya.html
@@ -1,135 +1,36 @@
 {% extends 'base-for-common.html' %}
-
-{% block title %}UzNation{% endblock %}
+{% load i18n %}
+{% block title %}UzNation | {% trans 'Gallery' %}{% endblock %}
 
 {% block main-row-div-1 %}
     <div class="col-lg-9 col-sm-8 col-xs-12 col-lg-push-3 col-sm-push-4 content">
-						<div class="masonry-holder">
-							<h2>O'zbek San'ati</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/rassom1.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/sanat.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/center.jpg" alt="image description" style="height:159px;">
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="masonry-holder">
-							<h2>Tarixiy Obidalar</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/obida4.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/obida6.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/obida5.jpg" alt="image description" style="height:159px;">
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="masonry-holder">
-							<h2>Zamonaviy Binoalar</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/1231.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/1232.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/1233.jpg" alt="image description" style="height:159px;">
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="masonry-holder">
-							<h2>Adiblar</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/adib4.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/adib5.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/adib3.jpg" alt="image description" style="height:159px;">
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="masonry-holder">
-							<h2>Milliy Boyliklar</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/pole.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/paxta1.jpg" alt="image description" style="height:159px;">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/bug'doy.jpg" alt="image description" style="height:159px;">
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
+        {% for menu in menus %}
+            {% if menu.gallery.count > 0 %}
+                <div class="masonry-holder">
+                    <h2>{{ menu.name }}</h2>
+                    <ul class="masonry add">
+                        {% for gallery in menu.gallery.all %}
+                            <li>
+                                <div class="holder">
+                                    <div class="img">
+                                        <img src="{{ gallery.photo.url }}" alt="image description"
+                                             style="height:159px;">
+                                    </div>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
 {% endblock %}
 
-{% block style %}col-lg-pull-9 col-sm-pull-8 sidebar{% endblock %}
+{% block pics %}
+    <ul class="instagram">
+        {% for pic in gallery %}
+            <li><a href="#"><img src="{{ pic.photo.url }}" alt="{{ pic.description|safe }}"
+                                 style="width:83px; height:83px;"></a></li>
+        {% endfor %}
+    </ul>
+{% endblock %}
