--- a/templates/kutubxona.html
+++ b/templates/kutubxona.html
@@ -1,36 +1,42 @@
-{% extends 'base-for-common.html' %}
-
-{% block title %}UzNation{% endblock %}
+{% extends 'base-for-common-right.html' %}
+{% load i18n %}
+{% block title %}UzNation {% trans 'Library' %}{% endblock %}
 
 {% block main-row-div-1 %}
-	<div class="col-lg-9 col-sm-8 col-xs-12 content">
     {% for library in libraries %}
-        <div class="masonry-holder">
+        {% if forloop.counter == 1 or forloop.counter == 4 or forloop.counter == 7 or forloop.counter == 10 or forloop.counter == 13 or forloop.counter == 16 %}
+            <div class="masonry-holder">
             <ul class="masonry add">
-                <li>
-                    <div class="holder">
-                        <div class="img">
-                            <img src="{{ library.photo }}" alt="image description" style="height:159px;">
-                        </div>
-                        <div class="download">
-                            <button type="button" class="btn btn-primary">Download
-                                <span class="glyphicon glyphicon-download"></span></button>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+        {% endif %}
+    <li>
+        <div class="holder">
+            {% if library.lib_photo %}
+                <div class="img">
+                    <img src="{{ library.lib_photo.url }}" alt="{{ library.lib_name }}"
+                         style="height:159px;">
+                </div>
+            {% endif %}
+            <div class="download">
+                <a type="button" class="btn btn-primary" href="{{ library.get_url }}">{% trans 'Download' %}
+                    <span class="glyphicon glyphicon-download"></span>
+                </a>
+            </div>
         </div>
-        {% endfor %}
-        <!-- paginations -->
-        <div class="paginations wow fadeInUp" data-wow-delay="0.6s">
-            <ul>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#"><i class="icon-right-open-mini"></i></a></li>
-            </ul>
+    </li>
+    {% if forloop.counter|divisibleby:3 or forloop.last %}
+        </ul>
         </div>
-    </div>
+    {% endif %}
+    {% endfor %}
+    {% include 'pagination.html' with page=libraries %}
+
 {% endblock %}
 
-{% block style %}sidebar{% endblock %}
+{% block pics %}
+ <ul class="instagram">
+        {% for pic in gallery %}
+            <li><a href="#"><img src="{{ pic.photo.url }}" alt="{{ pic.description|safe }}"
+                                 style="width:83px; height:83px;"></a></li>
+        {% endfor %}
+    </ul>
+{% endblock %}
