--- a/templates/maqol.html
+++ b/templates/maqol.html
@@ -1,59 +1,53 @@
 {% extends 'base-for-common.html' %}
+{% load staticfiles tree_tags i18n %}
 
-{% block title %}UzNation{% endblock %}
+{% block title %}UzNation | {% trans 'Proverbs' %}{% endblock %}
 
 {% block main-row-div-1 %}
     <div class="col-lg-9 col-sm-8 col-xs-12 col-lg-push-3 col-sm-push-4 content">
-						<!-- gallery -->
+        <!-- gallery -->
         <div class="text">
             <div class="panel-group" id="accordion">
-                {% for maqol in maqollar.all %}
-                <div class="panel panel-default">
-                <div class="panel-heading">
-                  <h4 class="panel-title">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ forloop.counter|stringformat:'' }}">{{ maqol.title }}</a>
-                  </h4>
-                </div>
-                    {% if forloop.counter == 1 %}
-                <div id="collapse{{ forloop.counter|stringformat:'' }}" class="panel-collapse collapse in">
-                        {% else %}
-                        <div id="collapse{{ forloop.counter|stringformat:'' }}" class="panel-collapse collapse">
-                    {% endif %}
-                  <div class="pancdel-body">{{ maqol.body|safe }}</div>
-                </div>
-              </div>
+                <h2>{% trans 'Uzbek Proverbs' %}</h2>
+                {% for maqol in posts %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion"
+                                   href="#collapse{{ forloop.counter }}">
+                                    {{ maqol.title }}</a>
+                            </h4>
+                        </div>
+                        <div id="collapse{{ forloop.counter }}" class="panel-collapse collapse in">
+                            <div class="panel-body">{{ maqol.body|safe }}</div>
+                        </div>
+                    </div>
                 {% endfor %}
-
-              <div class="masonry-holder">
-							<h2>O'zbek Adabiyoti Maqollari</h2>
-							<ul class="masonry add">
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/maqol.gif" alt="image description">
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-										<div class="img">
-											<img src="images/maqol.gif" alt="image description" >
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="holder">
-                                        <div class="img">
-											<img src="images/maqol.gif" alt="image description" >
-										</div>									</div>
-								</li>
-							</ul>
-						</div>
-
-  </div>
-
-							</div>
-							</div>
+                {% include 'pagination.html' with page=posts %}
+            </div>
+            <div class="masonry-holder">
+                <ul class="masonry add">
+                    {% for fairytale in tales %}
+                        <li>
+                            <div class="holder">
+                                <div class="img">
+                                    <img src="{{ fairytale.tale.photo.url }}"
+                                         alt="{{ fairytale.tale.title }}">
+                                </div>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
-{% block style %}col-lg-pull-9 col-sm-pull-8 sidebar{% endblock %}
+{% block pics %}
+    <ul class="instagram">
+        {% for pic in gallery %}
+            <li><a href="#"><img src="{{ pic.photo.url }}" alt="{{ pic.description|safe }}"
+                                 style="width:83px; height:83px;"></a></li>
+        {% endfor %}
+    </ul>
+{% endblock %}
