--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,13 +1,17 @@
 <div class="paginations wow fadeInUp" data-wow-delay="0.6s">
-    <span class="step-links">
+    <ul>
         {% if page.has_previous %}
-            <a href="?page={{ page.previous_page_number }}">Previous</a>
+            <li><a href="?page={{ page.previous_page_number }}"><i class="icon-left-open-mini"></i></a></li>
         {% endif %}
-        <span class="current">
-            Page {{ page.number }} of {{ page.paginator.num_pages }}.
-        </span>
+        {% if page.has_previous %}
+            <li><a href="?page={{ page.previous_page_number }}">{{ page.previous_page_number }}</a></li>
+        {% endif %}
+        <li class="active"><a href="?page={{ page.number }}">{{ page.number }}</a></li>
         {% if page.has_next %}
-            <a href="?page={{ page.next_page_number }}">Next</a>
+            <li><a href="?page={{ page.next_page_number }}">{{ page.next_page_number }}</a></li>
         {% endif %}
-    </span>
+        {% if page.has_next %}
+            <li><a href="?page={{ page.next_page_number }}"><i class="icon-right-open-mini"></i></a></li>
+        {% endif %}
+    </ul>
 </div>
