--- a/templates/regions.html
+++ b/templates/regions.html
@@ -1,22 +1,23 @@
-{% extends 'base-for-common-right.html' %}
+{% extends 'base-for-common.html' %}
 {% load i18n %}
-{% block title %}UzNation{% endblock %}
+{% block title %}UzNation | {% trans 'Regions' %}{% endblock %}
 
 {% block main-row-div-1 %}
+    <div class="col-lg-9 col-sm-8 col-xs-12 col-lg-push-3 col-sm-push-4 content">
         <div class="article-holder">
-            {% for content in posts %}
+            {% for region in regions %}
                 <!-- article -->
                 <article class="article side">
                     {% if forloop.counter|divisibleby:2 %}
                         <div class="image wow fadeInLeft" data-wow-delay="0.6s">
-                            <img src="{{ content.photo.url }}" alt="{{ content.title }}">
+                            <img src="{{ region.photo.url }}" alt="{{ region.title }}">
                         </div>
                         <div class="text wow fadeInRight" data-wow-delay="0.6s">
 
                             <div class="txt">
-                                <h2>{{ content.title }}</h2>
-                                <p>{{ content.body|truncatechars:250|safe }}</p>
-                                <a class="more" href="{% url 'uznation:small' pk=content.pk %}">
+                                <h2>{{ region.title }}</h2>
+                                <p>{{ region.body|truncatechars:250|safe }}</p>
+                                <a class="more" href="{% url 'uznation:regions' pk=region.pk %}">
                                     <span>{% trans 'MORE' %}</span>
                                     <i class="icon-right-thin"></i>
                                 </a>
@@ -26,26 +27,24 @@
                         <div class="text wow fadeInLeft" data-wow-delay="0.6s">
 
                             <div class="txt">
-                                <h2>{{ content.title }}</h2>
-                                <p>{{ content.body|truncatechars:250|safe }}</p>
-                                <a class="more" href="{% url 'uznation:small' pk=content.pk %}">
+                                <h2>{{ region.title }}</h2>
+                                <p>{{ region.body|truncatechars:250|safe }}</p>
+                                <a class="more" href="{% url 'uznation:regions' pk=region.pk %}">
                                     <span>{% trans 'MORE' %}</span>
                                     <i class="icon-right-thin"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="image wow fadeInRight" data-wow-delay="0.6s">
-                            <img src="{{ content.photo.url }}" alt="{{ content.title }}">
+                            <img src="{{ region.photo.url }}" alt="{{ region.title }}">
                         </div>
                     {% endif %}
 
                 </article>
             {% endfor %}
         </div>
-        <!-- paginations -->
-        {% include 'pagination.html' with page=posts %}
+    </div>
 {% endblock %}
-
 
 {% block pics %}
     <ul class="instagram">
