READY FOR START !!!

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,24 +8,27 @@
             <div class="text-area">
                 <h2>{% trans 'About the website' %}</h2>
                 <h3>{% trans 'The aim of creating this website' %}</h3>
-                <p>This website is made to share the whole information about Uzbek nationality and traditions. <b><em>Uznation.inha.uz</em></b>-national
-                    site is always ready to give help for users, volunteers, local people so that the people who really
-                    want to get a big source on Uzbekistan and its nationality can be satisfied with our work. In this
-                    national website, there could be found a great amount of useful information, collections of amazing
+
+                <p>{% blocktrans %}This website is made to share some useful information about Uzbek nationality and
+                    traditions. <b><em>Uznation.inha.uz</em></b>
+                    is always ready to give help for users, volunteers, local people so that they can easily
+                    get useful information on Uzbekistan and its nationality. In this
+                    website, there could be found a great amount of useful information, collections of amazing
                     facts and much more on historical places, sights where tourists can visit, monuments, architectural
                     as well as decorative arts and crafts, famous writers, scientists, poets, heroes who created the
                     history of our land and then praised them all over the world, regions and their administrative
-                    departs, national customs, habits, folklore of literature of Uzbekistan. Besides that, our staff
-                    never denies receiving your valuable comments and feedbacks is active which means a person who
+                    departs, national customs, habits, folklore of Uzbek literature. Besides that, our staff
+                    never denies receiving your valuable comments and feedback system is active which means a person who
                     wishes to connect with us or say any suggestions for us can easily send us personal viewpoints.
-                    Since, the main goal of this work is to attract more users to spend these all among the world and
-                    making them aware about the history and values of independence Uzbekistan. As far the president of
-                    our country-I.Karimov said, “Uzbekistan should be one of the high countries that always get
-                    wonderful future”.</p>
+                    Since the main goal of this work is to attract more visitors, to spend these all among the world and
+                    making them aware about the history and values of independence of Uzbekistan. As far the president of
+                    the Republic of Uzbekistan I.Karimov said, “Uzbekistan should be one of the high countries that always get
+                    wonderful future”.{% endblocktrans %}</p>
             </div>
         </div>
         <!-- blockquote -->
-        <div class="blockquote wow fadeInUp" data-wow-delay="0.6s" style="background-image: url({% static 'images/fon7.jpg' %});">
+        <div class="blockquote wow fadeInUp" data-wow-delay="0.6s"
+             style="background-image: url({% static 'images/fon7.jpg' %});">
             <div class="frame">
                 <div class="box-t">
                     <div class="box-c">
@@ -33,7 +36,9 @@
                             <q>
                                 <i class="icon-quote-left"></i>
                                 <span>
-                                    {% trans 'I think if you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what’s next.' %}
+                                    {% blocktrans %}I think if you do something and it turns out pretty good, then you
+                                        should go do something else wonderful, not dwell on it for too long. Just figure
+                                        out what’s next.{% endblocktrans %}
                                 </span>
                             </q>
                             <cite>STEVE JOBS</cite>
@@ -46,16 +51,13 @@
             <div class="text-area">
                 <h2>{% trans 'About Us' %}</h2>
                 <h3>{% trans 'Who are included in our team !!!' %}</h3>
-                <p>The website now you are watching is made by 3 member-team work. Our “Back End” developer is <b><em>Umar
-                    Kholdarbekov</em></b>, “Front End” Developers are <b><em>Maftuna Bozarova</em></b> and <b><em>Shakhnoza
-                    Ozodova</em></b>. At the current time, we all are studying at Inha University in Tashkent under the
-                    department ICE-Information Communication Engineering; the main thing you need to know is that we are
-                    so happy to be students of this university and future web-developers. Moreover, we all developed our
-                    knowledge, learnt interests, gained much experience and always tried our best within this team
-                    project. Now, we are glad to say a lot of thanks for helper websites which agreed with working
-                    together with us and thus, our site used their useful information as an extra source. Other special
-                    thanks are for<b><em> Voriskhan</em></b> for making amazing logo of special website-<b>Uznation.inha.uz</b>.
-                    Thanks a lot for everyone who supported us through thick and thin!</p>
+                <p>{% blocktrans %}The website that you are watching now was made by 3 member-team. Our “backend”
+                    developer is <b><em>Umar Kholdarbekov</em></b>, “frontend” developers are <b><em>Maftuna Bozarova</em>
+                    </b> and <b><em>Shakhnoza Ozodova</em></b>. Now, we all are studying at Inha University in Tashkent under the
+                    department of Information and Communication Engineering (ICE). We are glad to say thanks for
+                    the websites which agreed working with us and thus, our site used their useful information as an
+                    extra source. Other special thanks are for<b><em> Voriskhon</em></b> for making amazing logo for
+                    <b>Uznation.inha.uz</b>{% endblocktrans %}</p>
             </div>
         </div>
     </div>
