bug (typpo )fixed

--- a/culture_tourism/templates/base-for-common.html
+++ b/culture_tourism/templates/base-for-common.html
@@ -279,7 +279,7 @@
                          style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
                         <h2>{% trans 'TIME IN UZBEKISTAN' %}</h2>
                         <div class="tags">
-                            <h2>{{ clock|date:'H : i : s' }}</h2>
+                            <h2>{{ clock|date:'H : i' }}</h2>
 
                         </div>
                     </div>
