--- a/culture_tourism/templates/base-for-common.html
+++ b/culture_tourism/templates/base-for-common.html
@@ -26,6 +26,11 @@
     <link rel="stylesheet" href="{% static 'css/color/color.css' %}">
 
     <link rel="shortcut icon" href="{% static 'Lagan.png' %}">
+
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" id="st_insights_js" src="http://w.sharethis.com/button/buttons.js?publisher=193586d1-c743-4371-93fd-81aa1f8f5746"></script>
+    <script type="text/javascript">stLight.options({publisher: "193586d1-c743-4371-93fd-81aa1f8f5746", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+
 </head>
 
 <body>
