--- a/templates/big-text.html
+++ b/templates/big-text.html
@@ -12,6 +12,15 @@
     <div class="text">
         <p>{{ content.body|safe }}</p>
     </div>
+
+    <span class='st_vkontakte_large' displayText='Vkontakte'></span>
+    <span class='st_googleplus_large' displayText='Google +'></span>
+    <span class='st_twitter_large' displayText='Tweet'></span>
+    <span class='st_linkedin_large' displayText='LinkedIn'></span>
+    <span class='st_pinterest_large' displayText='Pinterest'></span>
+    <span class='st_facebook_large' displayText='Facebook'></span>
+    <span class='st_fblike_large' displayText='Facebook Like'></span>
+
     {% if content.tags %}
         <p>
             {% trans 'Tags' %}:
