--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                             <div class="slide">
                                 <div class="caption">
                                     <div class="text">
-                                        <p>{{ slide.description|safe }}</p>
+                                        {{ slide.description|safe }}
                                     </div>
                                 </div>
                                 <div class="image">
