--- a/culture_tourism/templates/base-for-common-right.html
+++ b/culture_tourism/templates/base-for-common-right.html
@@ -2,10 +2,11 @@
 {% load i18n thumbnail %}
 {% load tree_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>{% block title %}{% endblock %}</title>
