--- a/culture_tourism/templates/base-for-common.html
+++ b/culture_tourism/templates/base-for-common.html
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="col-lg-3 col-sm-4 col-xs-12 col-lg-pull-9 col-sm-pull-8 sidebar">
-                    <div class="widget wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="widget add wow fadeInUp" data-wow-delay="0.6s">
                         <h2>{% trans 'MOST VISITED PLACES' %}</h2>
                         <ul class="categories">
                             {% for visited in most_visited %}
