--- a/templates/index.html
+++ b/templates/index.html
@@ -241,7 +241,7 @@
                                     <div class="txt-holder wow fadeInUp" data-wow-delay="0.6s">
                                         <div class="images">
                                             <img src="{{ article.subarticle.first.photo|thumbnail_url:'kechabugun' }}"
-                                                 alt="image description" style="height:345px">
+                                                 alt="image description">
                                         </div>
                                         <div class="txts">
                                             <div class="txt-box">
